# python-restful-booker

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  logger.yaml  pyproject.toml  requirements.txt
.github/workflows/: main-ci.yml  pull-request-ci.yml
core/config/: restful_booker_config.ini
core/utils/: booker_config_parser.py  common_utils.py
pre-commiit/mac/: pre-commit
pre-commiit/windows/: pre-commit
rest_api/common/: auth_client.py  booking_client.py
rest_api/helpers/: booking_helper.py
rest_api/models/: booking_id_model.py  booking_model.py  create_booking_response_model.py
rest_api/schemas/: get_all_booking_ids_json_schema.json  get_booking_id_json_schema.json
src/: __init__.py
src/actions/: __init__.py  booking_actions.py  json_placeholder_actions.py
src/clients/: __init__.py  booking_client.py  json_placeholder_client.py
src/clients/booking/: __init__.py  auth_client.py  booking_client.py
src/clients/common/: __init__.py  base_client.py  base_endpoint.py
src/clients/json_placeholder/: __init__.py  comments_client.py  json_placeholder_client.py  posts_client.py
src/common/: auth_client.py  booking_client.py  common_paths.py  constants.py  logging_manager.py  sensitive_data_filter.py
src/config/: restful_booker_config.ini
src/configs/: booking_config_model.py  configs_management_model.py  env_config_model.py  jsonplaceholder_config_model.py  settings_management_model.py
src/endpoints/: __init__.py
src/endpoints/booking/: __init__.py  auth_endpoint.py  booking_endpoint.py
src/endpoints/json_placeholder/: __init__.py  comments_endpoint.py  posts_endpoint.py  users_endpoint.py
src/helpers/: __init__.py  booking_helper.py  compare_models.py
src/models/: __init__.py  booking_id_model.py  booking_model.py  create_booking_response_model.py
src/models/bookings/: __init__.py  (+3 more)
src/resources/: env_configs.yaml  env_configs_booking.yaml  env_configs_json_placeholder.yaml
src/utils/: __init__.py  booker_config_parser.py  common_utils.py  env_loader.py  singleton_meta.py
test/: test_booking_by_id.py  test_create_booking.py  test_delete_booking.py  test_get_bookings.py  test_update_booking.py
test/booking/: test_booking.py  test_delete_booking.py  test_get_bookings.py  test_update_booking.py
tests/: test_booking_by_id.py  test_create_booking.py  test_delete_booking.py  test_get_bookings.py  test_update_booking.py
tests/booking/: test_booking_by_id.py  test_booking_e2e.py  test_create_booking.py  test_delete_booking.py  test_get_bookings.py  test_update_booking.py
tests/json_placeholder/: test_get_comments.py  test_get_posts.py  test_json_placeholder_comments_e2e.py
(+30 files in other folders)
