[project]
name = "python-restful-booker"
version = "0.1.0"
description = ""
authors = [
    {name = "Anna Voitiuk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "assertpy (>=1.1,<2.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
